fixing z-index issue

--- a/source/styles/blocks/_nav.scss
+++ b/source/styles/blocks/_nav.scss
@@ -81,7 +81,7 @@
     padding: 0 1.5rem;
     position: absolute;
     right: 0;
-    z-index: 1;
+    z-index: 2;
 
     &::before {
       background-color: $white;
